assets/kube-state-metrics/kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  labels:
    k8s-app: kube-state-metrics
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: kube-state-metrics-tls
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8443
    targetPort: https-main
    protocol: TCP
  - name: https-self
    port: 9443
    targetPort: https-self
    protocol: TCP
  selector:
    k8s-app: kube-state-metrics
