assets/kube-state-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: |-
      Expose kube-state-metrics `/metrics` endpoints within the cluster on the following ports:
      * Port 8443 provides access to the Kubernetes resource metrics. This port is for internal use, and no other usage is guaranteed.
      * Port 9443 provides access to the internal kube-state-metrics metrics. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: kube-state-metrics-tls
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 2.12.0
  name: kube-state-metrics
  namespace: openshift-monitoring
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8443
    targetPort: https-main
  - name: https-self
    port: 9443
    targetPort: https-self
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: openshift-monitoring
