assets/kube-state-metrics/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: kube-state-metrics-access
  namespace: openshift-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics  # Label must match your kube-state-metrics pod
  policyTypes:
  - Ingress
  - Egress
  # Allow access to ports 8443(https-main)/9443(https-self)
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
    - port: 9443
      protocol: TCP
  egress:
  - {}
